Enhance security configuration and add new API endpoints for health check and public access