@@ -12,18 +12,30 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
 	@Bean
-	public SecurityFilterChain securityFilterChain(HttpSecurity http ) throws Exception {
+	public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 		http
 			.cors(cors -> cors.configurationSource(corsConfigurationSource()))
 			.csrf(AbstractHttpConfigurer::disable)
 
 			.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+			.authorizeHttpRequests(auth -> auth
+				// Non-Authenticate
+				.requestMatchers("/api/auth/**").permitAll()
+				.requestMatchers("/api/public/**").permitAll()
+				.requestMatchers("/", "/d").permitAll()
+				.requestMatchers("/health", "/actuator/**").permitAll()
+
+				// Required Authenticate
+				.anyRequest().authenticated()
+			)
 
 			.authorizeHttpRequests(auth -> auth
 				.requestMatchers("/api/auth/**").permitAll()
@@ -33,19 +45,25 @@ public class SecurityConfig {
 		// TODO: Validate JWT
 		// http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class );
 
-		return http.build( );
+		return http.build();
 	}
 
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(Arrays.asList("https://stuvy.anthhyo.dev" ));
+
+		configuration.setAllowedOrigins(Arrays.asList(
+			"https://stuvy.anthhyo.dev",
+			"http://localhost:4200"
+		));
+
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-		configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+		configuration.setAllowedHeaders(List.of("*"));
+		configuration.setAllowCredentials(true);
 
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
-		
+
 		return source;
 	}
 
